separated js + fixed syntax

--- a/index.html
+++ b/index.html
@@ -30,74 +30,13 @@
     </form>
 
  <!-- Movies will get dumped Here -->
- <div id="animals-view"></div>
+ <div id="animals-view">
 
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
- <script type="text/javascript">
-   // array of animals
-   var animals = ["squirrel", "dog", "cow", "horse", "platypus", "cat"];
+ </div>
 
-   // displayMovieInfo function re-renders the HTML to display the appropriate content
-   function displayGifs() {
-
-    var animal = $(this).attr("data-name");
-    var queryURL = "https://api.giphy.com/v1/gifs/search?api_key=v1H1STdrv7PNS7ufMaJbVnMCXjaua0rS&q=" + animal + "&limit=10&offset=0&rating=PG&lang=en";
-    var image = $('<img>');
-
-     // Creates AJAX call for the specific movie button being clicked
-     $.ajax({
-       url: queryURL,
-       method: "GET"
-     }).then(function(response) {
-       function displayGifs() {
-         $("#animals-view").prepend((response));
-       }
-     });
-
-     var div =$('<div>');
-        };
-
-      // Function for displaying movie data
-      function renderButtons() {
-
-        // Deletes the movies prior to adding new movies
-        // (this is necessary otherwise you will have repeat buttons)
-        $("#buttons-view").empty();
-        // Loops through the array of movies
-        for (var i = 0; i < animals.length; i++) {
-
-          // Then dynamicaly generates buttons for each movie in the array
-          // This code $("<button>") is all jQuery needs to create the beginning and end tag. (<button></button>)
-          var a = $("<button>");
-          // Adds a class of movie to our button
-          a.addClass("animal");
-          // Added a data-attribute
-          a.attr("data-name", animals[i]);
-          // Provided the initial button text
-          a.text(animals[i]);
-          // Added the button to the buttons-view div
-          $("#buttons-view").append(a);
-        }
-      }
-
-      // This function handles events where the add movie button is clicked
-      $("#add-animal").on("click", function(event) {
-        event.preventDefault();
-        // This line of code will grab the input from the textbox
-        var animal = $("#animal-input").val().trim();
-
-        // The movie from the textbox is then added to our array
-        animals.push(animal);
-
-        // Calling renderButtons which handles the processing of our movie array
-        renderButtons();
-      });
-
-      // Adding click event listeners to all elements with a class of "movie"
-      $(document).on("click", ".animal", displayGifs);
-
-      // Calling the renderButtons function to display the intial buttons
-      renderButtons();
+ <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ <script src="assets\javascript\app.js"></script>
+  
     </script>
   </div>
 </body>
